@@ -464,6 +464,8 @@ generateLogics: $(JAR_FILE) $(TEST_CLASSES_DIR) $(CORE_JAR_FILE)
 	@ echo "Generating logics"
 #	@ echo $(DELIM1)
 	@ for D in "$(TEST_LOGIC_DIRS)"; do echo $(DELIM1); echo "Generating $${D}"; java -cp $(RUNTIME_CLASSPATH) mettel.MettelGenerator -i "$(TEST_EXAMPLES_DIR)/$${D}/$${D}.s" -p "$(TEST_EXAMPLES_DIR)/$${D}/$${D}.properties" -d "test/output"; done
+	@ mv -fu *.jar $(LIB_DIR)
+	@ rm -f *.tokens
 	
 generateParsers: generateLogics
 #	@ TEST_LOGIC_PARSERS = $(shell find $(TEST_OUTPUT_DIR) -name '*.g')
@@ -477,7 +479,8 @@ generateParsers: generateLogics
 	    rm -f -v "$$(basename $${P} .g).tokens"; done
 #	@rm -f -v *.tokens
 	
-compileLogics: generateParsers
+compileLogics: generateLogics 
+#generateParsers
 	@ echo $(DELIM0)
 	@ echo "Compiling sources for logics"
 	@ echo $(DELIM1)
