@@ -139,20 +139,22 @@ public class MettelSpecification {
 
 	public MettelJavaPackageStructure process(MettelANTLRGrammarGeneratorProperties properties) {
 		final MettelJavaPackageStructure pStructure = new MettelJavaPackageStructure(path);
-		
+
 		//for(MettelTableau tab:tableaux){
 		//	tab.init(pStructure, properties);
 		//}
-		
+
 		for(MettelSyntax syn:syntaxes){
 			syn.process(pStructure, properties);
 		}
-		
+
 		for(MettelTableau tab:tableaux){
 			tab.process(pStructure, properties);
 		}
-		
+
+		pStructure.generateMainClass();
+
 		return pStructure;
 	}
-	
+
 }
